# Readard

./: .gitignore  CLAUDE.md  pyproject.toml  readtard_backend_plan.md
.claude/agents/: spoiler-safety-reviewer.md
.claude/commands/: check-spoilers.md
app/: __init__.py  book_structure.py  cli.py  config.py  demo.py  dispatcher.py  environment.py  index_functions.py  llm_factory.py  loaders.py  main.py  query.py  retrieval.py  settings.py  testing.ipynb  transformations.py
app/api/: __init__.py  position.py  routes.py  schemas.py  sessions.py
app/book/: __init__.py  context.py  contracts.py  loaders.py  locator.py  position.py  spine_local.py
app/index/: __init__.py  boundary.py  enrich.py  pipeline.py  transforms.py
app/llm/: __init__.py  factory.py  system_prompts.py
app/prompts/: query_prompts.py
app/session/: __init__.py  audiobook_mapping.py  partial_chunk.py  query.py  reading.py  retrieve.py
data/books/: book_aliases.json
data/books/hp_philosophers_stone/: metadata.json
docs/: FRONTEND_HANDOVER.md  FRONTEND_INTEGRATION.md
notebooks/: pydantic_testing.ipynb  spine_testing.ipynb  test.ipynb  testing.ipynb
