[project]
name = "readtard"
version = "0.1.0"
description = "Readtard: spoiler-aware EPUB reading companion (LlamaIndex)"
requires-python = ">=3.11"

dependencies = [
    "llama-index",
    "python-dotenv",
    "ebooklib",
]

[project.scripts]
readtard = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]